[project]
name = "ai-agent-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "libaice", email = "libaice147@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.104.0",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.3",
    "langgraph>=1.2.1",
    "python-dotenv>=1.2.2",
]

[project.scripts]
ai-agent-toolkit = "ai_agent_toolkit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
