[project]
name = "ai-agent-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "libaice", email = "libaice147@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.104.0",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.3",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=0.1.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=1.2.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=3.0.0",
    "tiktoken>=0.13.0",
]

[project.scripts]
ai-agent-toolkit = "ai_agent_toolkit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
